# test2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/myapp/: __main__.py
src/myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
